--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Asir 1</p>
         <p>Ángel Liste Rodeiro</p>
         <ul>
-            <li><a href="Index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="Tetris.html">Tetris</a></li>
             <li><a href="BuscaMinas.html">Busca Minas</a></li>
         </ul>
