--- a/BuscaMinas.html
+++ b/BuscaMinas.html
@@ -68,7 +68,7 @@
             <li><a href="https://es.wikipedia.org/wiki/Tetris">wikipedia</a></li>
         </ul>
         <ul>
-            <li><a href="Index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="Tetris.html">Tetris</a></li>
             <li><a href="BuscaMinas.html">Busca Minas</a></li>
         </ul>
