--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Juegos Retros</title>
-    <link rel="stylesheet" href="index2.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Juegos Retros</h1>
