--- a/BuscaMinas.html
+++ b/BuscaMinas.html
@@ -5,28 +5,26 @@
     <title>Busca Minas</title>
 </head>
 <body>
-    <h1>Busca Minas</h1>
-    <!-- Logo -->
-     <img src="Img/BuscaMinas_logo.png" height="100"/>
-    <!-- Indice -->
-    <ul>
-        <li>
-             <a href="#Title1">¿Qué es?</a> 
-        </li>
-         <li>
-            <a href="#Title2">Historia</a>
-         </li>
-         <li>
-             <a href="#Title3">Funcionamiento del juego</a>
-         </li>
-         <li>
-            <a href="#Title4">Curiosidades</a>
-            <ul>
-                <li><a href="#SubTitle1">Niveles de Dificultad</a></li>
-            </ul>
-         </li>
-     </ul>
-    <hr/>
+        <h1><img src="Img/BuscaMinas_logo.png" height="100"/>Busca Minas</h1>
+    <nav>
+        <ul>
+            <li>
+                 <a href="#Title1">¿Qué es?</a> 
+            </li>
+             <li>
+                <a href="#Title2">Historia</a>
+             </li>
+             <li>
+                 <a href="#Title3">Funcionamiento del juego</a>
+             </li>
+             <li>
+                <a href="#Title4">Curiosidades</a>
+                <ul>
+                    <li><a href="#SubTitle1">Niveles de Dificultad</a></li>
+                </ul>
+             </li>
+         </ul>
+    </nav>
     
     <h2 id="Title1">¿Qué es?</h2>
     <p>El Busca Minas es un juego de lógica, en el que el objetivo principal es encontrar todas las minas ocultas en un campo de celdas. Las celdas pueden contener un número que indica cuántas minas hay alrededor de ella, o una mina, en cuyo caso el jugador pierde.</p>
