--- a/BuscaMinas.html
+++ b/BuscaMinas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Busca Minas</title>
+    <link rel="stylesheet" href="buscaminas.css">
 </head>
 <body>
         <h1><img src="Img/BuscaMinas_logo.png" height="100"/>Busca Minas</h1>
