--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Juegos Retros</h1>
+        <a href="form_registrarse.html"><input type="button" value="REGISTRARSE"></a>
     <div class="blockarticle">
         <article class="articleTetris" >
             <a href="Tetris.html"><h2>Tetris</h2></a>
