--- a/BuscaMinas.html
+++ b/BuscaMinas.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>Busca Minas</title>
     <link rel="stylesheet" href="buscaminas.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-        <h1><img src="Img/BuscaMinas_logo.png" height="100"/>Busca Minas</h1>
     <nav>
         <ul>
             <li>
@@ -19,13 +21,15 @@
                  <a href="#Title3">Funcionamiento del juego</a>
              </li>
              <li>
+                <a href="#SubTitle1">Niveles de Dificultad</a>
+            </li>
+             <li>
                 <a href="#Title4">Curiosidades</a>
-                <ul>
-                    <li><a href="#SubTitle1">Niveles de Dificultad</a></li>
-                </ul>
              </li>
          </ul>
     </nav>
+    <main>
+        <h1><img src="Img/BuscaMinas_logo.png" height="100"/><p>Busca Minas</p></h1>
     <article>
     <h2 id="Title1">¿Qué es?</h2>
     <p>El Busca Minas es un juego de lógica, en el que el objetivo principal es encontrar todas las minas ocultas en un campo de celdas. Las celdas pueden contener un número que indica cuántas minas hay alrededor de ella, o una mina, en cuyo caso el jugador pierde.</p>
@@ -60,16 +64,13 @@
         La versión original de Busca Minas en Windows tenía un temporizador que registraba el tiempo que tomabas para completar el juego, lo que fomentaba la competencia entre los usuarios para conseguir el mejor tiempo.
         </p> 
 
-    <hr/>
     </article>
+    </main>
     <footer>       
-        <p>Asir 1</p>
-        <p>Ángel Liste Rodeiro</p>
+        <p>Asir 1 Ángel Liste Rodeiro</p>
 
         <ul>
-            <li><a href="https://es.wikipedia.org/wiki/Tetris">wikipedia</a></li>
-        </ul>
-        <ul>
+            <li><a href="https://es.wikipedia.org/wiki/Buscaminas">Wikipedia</a></li>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="Tetris.html">Tetris</a></li>
             <li><a href="BuscaMinas.html">Busca Minas</a></li>
