--- a/Tetris.html
+++ b/Tetris.html
@@ -3,18 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Tetris</title>
+    <link rel="stylesheet" href="tetris.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 </head>
     <body>
-        <header>
-            <h1>Tetris</h1>
-            <!--Imagen Top pagina-->
-            <img src="Img/Tetris_logo.png" height="60">
-            <!--Banda Sonora Tetris-->
-            <audio controls>
-                <source src="Audio/TetrisSoundtrack.mp3" >
-            </audio>
-            <hr/>
-        </header>
         <!-- Indice -->
         <nav>
             <ul>
@@ -28,11 +22,18 @@
                     <a href="Title3">Funcionamiento del juego</a>
                 </li>
                 <li>
-                    <a href="Title4">Versiones</a>
+                    <a href="Title4">eSports</a>
                 </li>
             </ul>
-        <br/>
         </nav>
+        <main>
+        <header>
+            <h1><img src="Img/Tetris_logo.png" height="60">Tetris</h1>
+            <!--Banda Sonora Tetris-->
+            <audio controls>
+                <source src="Audio/TetrisSoundtrack.mp3" >
+            </audio>
+        </header>
         <article>
         <h2 id="Title1">¿Qué es?</h2>
             <p>Es un videojuego de lógica soviético originalmente diseñado y programado por Alekséi Pázhitnov.
@@ -148,17 +149,14 @@
                 La competición dura dos días, con la Ronda de Clasificación durante el primer día y el evento Principal durante el segundo. Los participantes tienen permitido traer su control propio, pero éste tiene que ser un control de NES original sin modificaciones.
                 El Classic Tetris World Championship se juega con un cartucho original 8-bit de Nintendo NES. Aquellos individuos que han apoyado el evento reciben una edición limitada dorada del juego.
             </p>
-        <hr>
         </article>
+        </main>
         <!--Footer-->
         <footer>       
-            <p>Asir 1</p>
-            <p>Ángel Liste Rodeiro</p>
-
+            <p>Asir 1 Ángel Liste Rodeiro</p>
+    
             <ul>
-                <li><a href="https://es.wikipedia.org/wiki/Tetris">wikipedia</a></li>
-            </ul>
-            <ul>
+                <li><a href="https://es.wikipedia.org/wiki/Tetris">Wikipedia</a></li>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="Tetris.html">Tetris</a></li>
                 <li><a href="BuscaMinas.html">Busca Minas</a></li>
