--- a/form_registrarse.html
+++ b/form_registrarse.html
@@ -3,24 +3,25 @@
 	<head>
 		 <meta charset="UTF-8">
 		 <title>Registrarse</title>
+         <link rel="stylesheet" href="form.css">
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+         <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+     
     </head>
     <body>
-        <a href="index.html"><h1>Juegos Retros</h1></a>
+        <h1><a href="index.html">Juegos Retros</a></h1>
 
         <form>
             <label>Nombre Usuario</label>
             <input type="text" placeholder="Name" required>
-            <br>
             <label>Correo Electronico</label>
             <input type="email" placeholder="Correo">
-            <br>
             <label>Contraseña</label>
             <input type="password" required>
-            <br>
             <label>Repite Contraseña</label>
             <input type="password" required>
-            <br>
-            <input type="submit" value="Enviar">
         </form>
+        <input class="submit" type="submit" value="Enviar">
     </body>
 </html>
