--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Juegos Retros</h1>
-        <a href="form_registrarse.html"><input type="button" value="REGISTRARSE"></a>
     <div class="blockarticle">
         <article class="articleTetris" >
             <a href="Tetris.html"><h2>Tetris</h2></a>
@@ -21,12 +20,12 @@
         </article>
     </div>
     <footer>
-        <p>Asir 1</p>
-        <p>Ángel Liste Rodeiro</p>
+        <p>Asir 1 Ángel Liste Rodeiro</p>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="Tetris.html">Tetris</a></li>
             <li><a href="BuscaMinas.html">Busca Minas</a></li>
+            <li ><a href="form_registrarse.html">REGISTRARSE</a></li>
         </ul>
 
     </footer>
